--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH_DOMAIN="dev-6rh238w71ypnfie7.us.auth0.com";
-REACT_APP_CLIENT_ID="RA1XN4OjRbx1R9e290IgoZgSUogZFV0m";
-BASE_URL = "https://bhawanielectronics.netlify.app/";
+REACT_APP_AUTH_DOMAIN="dev-6rh238w71ypnfie7.us.auth0.com"
+REACT_APP_CLIENT_ID="RA1XN4OjRbx1R9e290IgoZgSUogZFV0m"
+BASE_URL = "https://bhawanielectronics.netlify.app/"
